examples/example_058/example_058.v
Require Import Foo.foo.
Fail Check bar.
